2004-02-29  Christian Reis <kiko@async.com.br>

    * developer.src: fix bonsai link to include gnome-python. Add a line about
    triage and testcases.

    * downloads.src: add win32 section.

2004-02-28  Christian Reis <kiko@async.com.br>

    * people.src: added a link and updated johan's entry. Reordered the
    entries alphabetically, changed the text slightly.

    * about.src: minor reorganization, added links and boldified bits of text.
    Added  a paragraph on the Python language.

    * head.src: renamed Welcome for Home; I think it's slightly more
    understandable.

    * downloads.src: added links, headers, an opening paragraph and tidied up
    CVS information slightly.

    * feedback.src, head.src: rename Feedback to Support, and change header.
    Did minor wording cleanups to the text; fixed a <div> placed too early.

    * developer.src: reformatted page; added text, convenient links and extra
    sections. This is just a first shot at where we might want to go with
    this.

    I ispelled and wrapped things a bit here and there while I was at it.

2004-02-27  Christian Reis <kiko@async.com.br>

    * articles/applets_arturogf/x304.html: fix link.

2004-02-25  Christian Reis <kiko@async.com.br>
    
    * Makefile: use -N (instead of -c) to wget fetches the newer tarballs
    correctly. Also inverted tar arguments to make Greg happy.

    * developer.src: Fix bug numbers.

    * foot.src, reference.src, tutorial.src: fix dates to use ISO format.

    * Makefile, tutorial.src, reference.src: add lgs' spanish translation 
    of the tutorial, fixing the links to it in the tutorial page. Also updated
    the tarball sizes.

2004-02-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* head.src: Added a menu entry for the developer page.

	* applications.src: Added NumExp, Gustavo nice project.

2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* developer.src: Added another bug in the list.

2004-02-23  Xavier Ordoquy  <xordoquy@wanadoo.fr>
